# PSoXide-3

./: .gitignore  Cargo.toml  Makefile  NOTICE.md  PROGRESS.md  README.md  deny.toml  rust-toolchain.toml
crates/psx-hw/: Cargo.toml
crates/psx-hw/src/: bios.rs  cdrom.rs  dma.rs  gpu.rs  gte.rs  interrupt.rs  lib.rs  mdec.rs  memory.rs  sio.rs  spu.rs  timer.rs
crates/psx-trace/: Cargo.toml
crates/psx-trace/src/: lib.rs
editor/: Cargo.toml
editor/crates/psxed/: Cargo.toml
editor/crates/psxed-format/: Cargo.toml
editor/crates/psxed-format/src/: animation.rs  lib.rs  mesh.rs  model.rs  texture.rs  world.rs
editor/crates/psxed-gltf/: Cargo.toml
editor/crates/psxed-gltf/src/: lib.rs
editor/crates/psxed-obj/: Cargo.toml
editor/crates/psxed-obj/src/: lib.rs
editor/crates/psxed-project/: Cargo.toml
editor/crates/psxed-project/src/: lib.rs  model_import.rs  playtest.rs  resolve.rs  spatial.rs  streaming.rs  texture_import.rs  world_cook.rs
editor/crates/psxed-tex/: Cargo.toml
editor/crates/psxed-tex/src/: lib.rs
editor/crates/psxed-ui/: Cargo.toml
editor/crates/psxed-ui/src/: history.rs  icons.rs  lib.rs  model_import_preview.rs  play_mode.rs  style.rs
editor/crates/psxed/src/: main.rs
editor/projects/: .gitignore
editor/projects/default/: project.ron
emu/: Cargo.toml
emu/.cargo/: config.toml
emu/crates/emulator-core/: Cargo.toml
emu/crates/emulator-core/examples/: bench_frame_paths.rs  bios_syscall_probe.rs  boot_disc.rs  cache_diff.rs  cache_inspect.rs  cdrom_drive_test.rs  cdrom_probe.rs  compare_audio_with_redux.rs  disasm_ram_range.rs  display_parity_at.rs  dma3_audit.rs  dump_isr_window.rs  fetch_first_opcode.rs  generate_trace.rs  gpu_at_step.rs  irq_at_step.rs  local_lockstep_sweep.rs  our_trace_from.rs  parity_diff_at.rs  probe_19474544.rs  probe_aggregated.rs  probe_all_games_100m.rs  probe_all_gpu_cmds.rs  probe_any_example.rs  probe_audio.rs  probe_banner_order.rs  probe_bios_audio.rs  probe_bios_audio_onset.rs  probe_breakout_frames.rs  probe_cdrom_cmds.rs  probe_cdrom_irq_timing.rs  probe_cdrom_state.rs  probe_cdrom_state_at.rs  probe_cmd_hist.rs  probe_coarse_divergence.rs  probe_crash_display.rs  probe_crash_frames.rs  probe_crash_hang.rs  probe_crash_jump.rs  probe_crash_wav.rs  (+70 more)
emu/crates/emulator-core/src/: bus.rs  cdrom.rs  cpu.rs  dma.rs  fastboot.rs  gpu.rs  gte.rs  hle_bios.rs  irq.rs  lib.rs  mdec.rs  mmio_trace.rs  pad.rs  scheduler.rs  sio.rs  spu.rs  telemetry.rs  timers.rs  vram.rs
emu/crates/emulator-core/tests/: milestones.rs  parity.rs  sdk_milestones.rs
emu/crates/frontend/: Cargo.toml
emu/crates/frontend/examples/: bench_cpu_loop.rs
emu/crates/frontend/src/: app.rs  app_icon.rs  audio.rs  cli.rs  compute_backend.rs  disasm.rs  editor_assets.rs  editor_preview.rs  editor_textures.rs  embedded_playtest.rs  gamepad.rs  gfx.rs  icons.rs  input.rs  main.rs  theme.rs
emu/crates/parity-oracle/: Cargo.toml
emu/crates/parity-oracle/examples/: capture_vram_hash.rs  disc_vram_parity.rs  find_big_jumps.rs  find_irq_entries.rs  introspect_pcsx.rs  peek_at_step.rs  redux_introspect.rs  redux_irq_probe.rs  redux_spu_probe.rs  screenshot_probe.rs  trace_inspect.rs  trace_stats.rs
emu/crates/parity-oracle/lua/: oracle.lua
emu/crates/parity-oracle/src/: cache.rs  config.rs  error.rs  launch.rs  lib.rs
emu/crates/parity-oracle/tests/: commercial_disc_smoke.rs  display_parity.rs  side_loaded_exe.rs  smoke.rs
emu/crates/psoxide-settings/: Cargo.toml
emu/crates/psoxide-settings/src/: lib.rs  library.rs  paths.rs  savestate.rs  settings.rs
emu/crates/psx-gpu-compute/: Cargo.toml
emu/crates/psx-gpu-compute/examples/: bench_frontend_loop.rs  bench_rasterizer.rs  replay_bisect.rs  replay_disc.rs
emu/crates/psx-gpu-compute/shaders/: fill.wgsl  mono_rect.wgsl  mono_tri.wgsl  mono_tri_scanline.wgsl  shaded_tex_tri.wgsl  shaded_tex_tri_scanline.wgsl  shaded_tri.wgsl  shaded_tri_scanline.wgsl  tex_quad_bilinear.wgsl  tex_rect.wgsl  tex_tri.wgsl  tex_tri_scanline.wgsl
emu/crates/psx-gpu-compute/src/: decode.rs  lib.rs  primitive.rs  rasterizer.rs  replay.rs  scanline.rs  vram.rs
emu/crates/psx-gpu-render/: Cargo.toml
engine/: Cargo.toml
engine/crates/psx-engine/: Cargo.toml
engine/crates/psx-level/: Cargo.toml
engine/examples/editor-playtest/: Cargo.toml  README.md  build.rs
engine/examples/game-breakout/: Cargo.toml
engine/examples/game-invaders/: Cargo.toml
engine/examples/game-pong/: Cargo.toml
engine/examples/hello-engine/: Cargo.toml
engine/examples/showcase-3d/: Cargo.toml
engine/examples/showcase-fog/: Cargo.toml
engine/examples/showcase-lights/: Cargo.toml
engine/examples/showcase-model/: Cargo.toml
engine/examples/showcase-particles/: Cargo.toml
engine/examples/showcase-room/: Cargo.toml  build.rs
engine/examples/showcase-text/: Cargo.toml
engine/examples/showcase-textured-sprite/: Cargo.toml
sdk/: Cargo.toml  psoxide.ld
sdk/crates/psx-asset/: Cargo.toml
sdk/crates/psx-font/: Cargo.toml
sdk/crates/psx-fx/: Cargo.toml
sdk/crates/psx-gpu/: Cargo.toml
sdk/crates/psx-gte/: Cargo.toml
sdk/crates/psx-gte-core/: Cargo.toml
sdk/crates/psx-io/: Cargo.toml
sdk/crates/psx-math/: Cargo.toml
sdk/crates/psx-pad/: Cargo.toml
sdk/crates/psx-rt/: Cargo.toml
sdk/crates/psx-sdk/: Cargo.toml
sdk/crates/psx-spu/: Cargo.toml
sdk/crates/psx-vram/: Cargo.toml
sdk/examples/breakout/: Cargo.toml
sdk/examples/game-breakout/: Cargo.toml
sdk/examples/game-invaders/: Cargo.toml
sdk/examples/game-pong/: Cargo.toml
sdk/examples/hello-audio/: Cargo.toml
sdk/examples/hello-gte/: Cargo.toml
sdk/examples/hello-input/: Cargo.toml
sdk/examples/hello-ot/: Cargo.toml
sdk/examples/hello-tex/: Cargo.toml
sdk/examples/hello-tri/: Cargo.toml
sdk/examples/invaders/: Cargo.toml
sdk/examples/pong/: Cargo.toml
sdk/examples/scene-lab/: Cargo.toml
sdk/examples/showcase-3d/: Cargo.toml
sdk/examples/showcase-fog/: Cargo.toml
sdk/examples/showcase-lights/: Cargo.toml
sdk/examples/showcase-text/: Cargo.toml
sdk/examples/showcase-textured-sprite/: Cargo.toml
(+217 files in other folders)
