[workspace]
resolver = "2"
members = [
    "crates/emulator-core",
    "crates/frontend",
    "crates/parity-oracle",
    "crates/psoxide-settings",
    "crates/psx-gpu-compute",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"

[workspace.dependencies]
# Shared-crate path deps. Three levels up: emu/crates/emulator-core/ → repo root → crates/.
psx-hw    = { path = "../crates/psx-hw" }
psx-iso   = { path = "../crates/psx-iso" }
psx-trace = { path = "../crates/psx-trace" }

# Host-workspace-internal deps (one crate depends on another here).
emulator-core    = { path = "crates/emulator-core" }
parity-oracle    = { path = "crates/parity-oracle" }
psoxide-settings = { path = "crates/psoxide-settings" }

thiserror  = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile   = "3.10"
# Rust-native config + save-state formats. RON for human-editable
# config (settings.ron, library.ron) — tagged enums round-trip
# losslessly; postcard for binary savestates (compact, serde-native).
ron         = "0.8"
postcard    = { version = "1.0", features = ["alloc"] }
directories = "5.0"
clap        = { version = "4.5", features = ["derive"] }

# Frontend stack. Locked-in versions that PSoXide-1/-2 both converged on;
# bumping is a deliberate decision, not a drift.
winit       = "0.30"
wgpu        = "24"
egui        = "0.31"
egui-wgpu   = "0.31"
egui-winit  = "0.31"
pollster    = "0.3"
cpal        = "0.15"
gilrs       = "0.11"
