[workspace]
resolver = "2"
members = [
    "crates/psx-io",
    "crates/psx-rt",
    "crates/psx-gpu",
    "crates/psx-gte",
    "crates/psx-pad",
    "crates/psx-sdk",
    "crates/psx-vram",
]

# The examples are built against the MIPS target via a separate
# nightly toolchain — keep them out of the main workspace so
# `cargo check` in the default (host) target doesn't try to compile
# bare-metal binaries on the wrong target.
exclude = ["examples"]

[workspace.package]
edition    = "2021"
license    = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"

[workspace.dependencies]
psx-hw  = { path = "../crates/psx-hw" }
psx-io  = { path = "crates/psx-io" }
psx-rt  = { path = "crates/psx-rt" }
psx-gpu = { path = "crates/psx-gpu" }
psx-gte = { path = "crates/psx-gte" }
psx-pad = { path = "crates/psx-pad" }
psx-sdk = { path = "crates/psx-sdk" }
psx-vram = { path = "crates/psx-vram" }
