[package]
name    = "psxed-format"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PSoXide cooked-asset binary formats. Shared by the editor (producer) and the SDK's psx-asset runtime parser (consumer) so layout drift is impossible."

[lints.rust]
missing_docs = "warn"
