[package]
name    = "psxed-gltf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "glTF/GLB mesh importer for PSoXide's content pipeline. Cooks scene meshes into PSXM blobs."

[dependencies]
gltf         = "1"
psxed-format = { workspace = true }
psxed-obj    = { workspace = true }
psxed-tex    = { workspace = true }

[dev-dependencies]
psx-asset = { path = "../../../sdk/crates/psx-asset" }
