[package]
name    = "psxed-obj"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OBJ parser + vertex-cluster decimator for PSoXide's content pipeline. Emits PSXM-format blobs matching the psxed-format layout."

[dependencies]
psxed-format = { workspace = true }

[lints.rust]
missing_docs = "warn"
