[package]
name    = "psxed-obj"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/EBonura/PSoXide"
description = "OBJ parser + vertex-cluster decimator for PSoXide's content pipeline. Emits PSXM-format blobs matching the psxed-format layout."

# Explicit path so this crate resolves cleanly when consumed
# from outside the editor workspace (transitive dep through
# psxed-gltf → psxed-project → emu frontend).
[dependencies]
psxed-format = { path = "../psxed-format" }

[lints.rust]
missing_docs = "warn"
