[package]
name = "emulator-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PSoXide emulator core: CPU, bus, and peripherals. No UI, no window — pure state machine."

[dependencies]
psx-hw    = { workspace = true }
psx-iso   = { workspace = true }
psx-trace = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
parity-oracle = { workspace = true }

[features]
default = []
# Record every MMIO read/write in a bounded ring buffer on the Bus.
# Off by default — see `mmio_trace.rs` for why it's compile-time gated.
trace-mmio = []

[lints.rust]
missing_docs = "warn"
