[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
emulator-core    = { workspace = true }
psoxide-settings = { workspace = true }
psx-iso          = { workspace = true }
psx-trace        = { workspace = true }

clap       = { workspace = true }
winit      = { workspace = true }
wgpu       = { workspace = true }
egui       = { workspace = true }
egui-wgpu  = { workspace = true }
egui-winit = { workspace = true }
pollster   = { workspace = true }
