[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
emulator-core    = { workspace = true }
psoxide-settings = { workspace = true }
psx-asset        = { workspace = true }
psx-engine       = { workspace = true }
psx-gpu          = { workspace = true }
psx-gpu-compute  = { workspace = true }
psx-gpu-render   = { workspace = true }
psx-gte          = { workspace = true }
psx-iso          = { workspace = true }
psx-trace        = { workspace = true }
psxed-project    = { workspace = true }
psxed-ui         = { workspace = true }

clap       = { workspace = true }
winit      = { workspace = true }
wgpu       = { workspace = true }
egui       = { workspace = true }
egui-wgpu  = { workspace = true }
egui-winit = { workspace = true }
pollster   = { workspace = true }
cpal       = { workspace = true }
gilrs      = { workspace = true }
