[package]
name = "parity-oracle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PCSX-Redux harness: manages a headless Redux subprocess and collects traces to validate emulator-core against."

[dependencies]
psx-trace  = { workspace = true }
thiserror  = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "smoke"
path = "tests/smoke.rs"
