[package]
name = "parity-oracle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PCSX-Redux harness: manages a headless Redux subprocess and collects traces to validate emulator-core against."

[dependencies]
psx-trace  = { workspace = true }
thiserror  = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Disc-parity example runs our emulator in-process alongside Redux.
# Kept as a dev-dep so the core crate stays free of the engine dep
# for its normal (Redux-only) consumers.
emulator-core = { path = "../emulator-core" }
psx-iso       = { workspace = true }

[[test]]
name = "smoke"
path = "tests/smoke.rs"
