[package]
name        = "psx-gpu-compute"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[lib]
path = "src/lib.rs"

[dependencies]
wgpu      = { workspace = true }
pollster  = { workspace = true }
bytemuck  = { version = "1.16", features = ["derive"] }
bitflags  = "2.6"
thiserror = { workspace = true }

[dev-dependencies]
emulator-core = { workspace = true }
