[package]
name        = "psx-gpu-render"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[lib]
path = "src/lib.rs"

[dependencies]
emulator-core   = { workspace = true }
psx-gpu-compute = { workspace = true }
wgpu            = { workspace = true }
bytemuck        = { version = "1.16", features = ["derive"] }
egui            = { workspace = true }
egui-wgpu       = { workspace = true }

[dev-dependencies]
psx-iso  = { workspace = true }
pollster = { workspace = true }
