[package]
name    = "psx-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PSoXide engine layer. Scene/App framework + canonical unit types (Angle, Frames) sitting on top of the SDK. Host-independent; MIPS-target only."

[dependencies]
psx-gpu  = { workspace = true }
psx-gte  = { workspace = true }
psx-math = { workspace = true }
psx-pad  = { workspace = true }
psx-spu  = { workspace = true }
psx-vram = { workspace = true }

[lints.rust]
missing_docs = "warn"
