[package]
name    = "psx-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PSoXide engine layer. Scene/App framework + canonical unit types (Angle, Frames) sitting on top of the SDK. Host-independent; MIPS-target only."

[dependencies]
# Explicit paths rather than `workspace = true` so this crate
# resolves cleanly when consumed from outside its native workspace
# (the editor frontend pulls it in for the 3D-viewport host renderer).
psx-asset = { path = "../../../sdk/crates/psx-asset" }
psx-gpu   = { path = "../../../sdk/crates/psx-gpu" }
psx-gte   = { path = "../../../sdk/crates/psx-gte" }
psx-math  = { path = "../../../sdk/crates/psx-math" }
psx-pad   = { path = "../../../sdk/crates/psx-pad" }
psx-spu   = { path = "../../../sdk/crates/psx-spu" }
psx-vram  = { path = "../../../sdk/crates/psx-vram" }

[target.'cfg(target_arch = "mips")'.dependencies]
psx-rt = { path = "../../../sdk/crates/psx-rt" }

[lints.rust]
missing_docs = "warn"
