[package]
name    = "showcase-3d"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "showcase-3d"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
psx-asset  = { path = "../../../sdk/crates/psx-asset" }
psx-engine = { path = "../../crates/psx-engine" }
psx-font   = { path = "../../../sdk/crates/psx-font" }
psx-fx     = { path = "../../../sdk/crates/psx-fx" }
psx-gpu    = { path = "../../../sdk/crates/psx-gpu" }
psx-gte    = { path = "../../../sdk/crates/psx-gte" }
psx-rt     = { path = "../../../sdk/crates/psx-rt" }
psx-vram   = { path = "../../../sdk/crates/psx-vram" }
